--- a/index.html
+++ b/index.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebAR with GLB Models</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/jsm/loaders/GLTFLoader.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/jsm/webxr/ARButton.js"></script>
-</head>
-<body style="margin: 0; overflow: hidden;">
-    <script>
+    <script type="module">
+        import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.module.js';
+        import { GLTFLoader } from 'https://cdn.jsdelivr.net/npm/three@0.128.0/examples/jsm/loaders/GLTFLoader.js';
+        import { ARButton } from 'https://cdn.jsdelivr.net/npm/three@0.128.0/examples/jsm/webxr/ARButton.js';
+
         let scene, camera, renderer;
-        let objects = [];  // Store GLB models
+        let objects = []; 
         let selectedObject = null;
 
         function init() {
-            // Scene, Camera, Renderer
             scene = new THREE.Scene();
             camera = new THREE.PerspectiveCamera(70, window.innerWidth / window.innerHeight, 0.1, 1000);
             renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
@@ -24,28 +22,39 @@
             document.body.appendChild(renderer.domElement);
 
             // Add AR Button
-            document.body.appendChild(THREE.ARButton.createButton(renderer));
+            document.body.appendChild(ARButton.createButton(renderer));
+
+            // Add a test cube to verify rendering
+            let geometry = new THREE.BoxGeometry(0.2, 0.2, 0.2);
+            let material = new THREE.MeshBasicMaterial({ color: 0xff0000 });
+            let cube = new THREE.Mesh(geometry, material);
+            scene.add(cube);
 
             // Load GLB Models
-            const loader = new THREE.GLTFLoader();
+            const loader = new GLTFLoader();
 
-            loader.load("obj1.glb", function(gltf) {
+            loader.load("obj1.glb", function (gltf) {
                 let model1 = gltf.scene;
                 model1.position.set(-0.3, 0, -1);
                 model1.scale.set(0.5, 0.5, 0.5);
                 scene.add(model1);
                 objects.push(model1);
+                console.log("Model 1 loaded");
+            }, undefined, function (error) {
+                console.error("Error loading obj1.glb:", error);
             });
 
-            loader.load("obj2.glb", function(gltf) {
+            loader.load("obj2.glb", function (gltf) {
                 let model2 = gltf.scene;
                 model2.position.set(0.3, 0, -1);
                 model2.scale.set(0.5, 0.5, 0.5);
                 scene.add(model2);
                 objects.push(model2);
+                console.log("Model 2 loaded");
+            }, undefined, function (error) {
+                console.error("Error loading obj2.glb:", error);
             });
 
-            // Touch Events
             document.addEventListener("touchstart", onTouchStart, false);
             document.addEventListener("touchmove", onTouchMove, false);
             document.addEventListener("touchend", onTouchEnd, false);
@@ -58,27 +67,30 @@
             let mouse = getTouchPosition(touch);
             let raycaster = new THREE.Raycaster();
             raycaster.setFromCamera(mouse, camera);
-            
+
             let intersects = raycaster.intersectObjects(objects, true);
             if (intersects.length > 0) {
-                selectedObject = intersects[0].object.parent; // Select the touched GLB model
+                selectedObject = intersects[0].object.parent;
+                console.log("Object selected:", selectedObject);
             }
         }
 
         function onTouchMove(event) {
             if (!selectedObject) return;
+            event.preventDefault();
 
             let touch = event.touches[0];
             let mouse = getTouchPosition(touch);
             let raycaster = new THREE.Raycaster();
             raycaster.setFromCamera(mouse, camera);
-            
+
             let plane = new THREE.Plane(new THREE.Vector3(0, 0, 1), -1);
             let intersection = new THREE.Vector3();
 
             if (raycaster.ray.intersectPlane(plane, intersection)) {
                 selectedObject.position.x = intersection.x;
                 selectedObject.position.y = intersection.y;
+                console.log("Object moved to:", intersection.x, intersection.y);
             }
         }
 
@@ -101,5 +113,7 @@
 
         init();
     </script>
+</head>
+<body style="margin: 0; overflow: hidden;">
 </body>
 </html>
